# svg_turtle_art

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
assets/examples/: config.example.json
scripts/: smoke_render.py
src/svg_turtle_renderer/: __init__.py  __main__.py  cli.py  main.py
src/svg_turtle_renderer/core/: __init__.py  config.py  engine.py  exceptions.py  export.py  gcode.py  model.py
src/svg_turtle_renderer/geometry/: __init__.py  banding.py  bezier.py  clipping.py  coordinate_system.py  fill_rule.py  polyline.py  scaler.py  scanline.py
src/svg_turtle_renderer/gui/: __init__.py  __main__.py  dashboard.py  render_job.py  theme.py  tk_canvas.py  widgets.py
src/svg_turtle_renderer/parser/: __init__.py  color_parser.py  path_parser.py  svg_parser.py  transform_parser.py
src/svg_turtle_renderer/renderer/: __init__.py  animation.py  canvas.py  path_renderer.py  raster_canvas.py  turtle_renderer.py
src/svg_turtle_renderer/utils/: __init__.py  helpers.py  logger.py  progress.py
tests/: conftest.py  test_animation.py  test_banding.py  test_bezier.py  test_cli.py  test_clipping.py  test_color_parser.py  test_config.py  test_engine.py  test_export.py  test_fill_rule.py  test_gcode.py  test_gui.py  test_helpers.py  test_path_parser.py  test_polyline.py  test_progress.py  test_raster_canvas.py  test_scaler.py  test_scanline.py  test_svg_parser.py  test_transform_parser.py  test_turtle_renderer.py
